tcw3/designer/tests/bad/const_indefinite.tcwdl
pub comp crate::Comp1 {
    // `?` is not allowed in a non-`#[prototype_only]` component
    const field: u32 { pub set; } = ?;
    //~^ ERROR Fields cannot have a indefinite value in a non-`#[prototype_only]` component
}
